objects/LLC_BI__Product_Package__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Handover_Type__c</fullName>
        <description>Users select the type of a Handover Loan from this optional picklist. By default it is blank.</description>
        <label>Handover Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Distressed Loans</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Has_Leases__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This optional checkbox field is an automatic flag to denote whether any of the underlying facilities are lease products.</description>
        <label>Has Leases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Has_Syndicated_Loans__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This optional field is an automatic flag to denote whether any of the underlying facilities have been marked as &quot;Is Syndication&quot; loans.</description>
        <label>Has Syndicated Loans</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Last_Exposure_Calc_Date__c</fullName>
        <description>This date/time field automatically populates via the system. This field specifies the most recent date and time for a given exposure calculation. Default is null.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Exposure Calculation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Last_Review_Date__c</fullName>
        <description>This field is an optional date field. Only used if the customer will be initiating Reviews from the Product Package level. This field is used to show the date of the last review completed on the Product Package and its loans and relationships associated to those loans.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Facilities_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is automatically populated and used to store the number of top level loan facilities in the product package. The count of loan facilities will NOT include those loans that have been superseded, declined or withdrawn.</description>
        <label>Number of Loan Facilities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__New_Deposit_Blended_Rate__c</fullName>
        <description>The system populates this field to determine the approximate blended rate of new interest-bearing products an FI originates in the deal outside of nCino. By default, it is blank.</description>
        <inlineHelpText>Use this field to determine the approximate blended rate of new interest-bearing products an FI originates in the deal outside of nCino.</inlineHelpText>
        <label>New Deposit Product Rate</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__New_Deposit_Revenue_Rate__c</fullName>
        <defaultValue>0.02</defaultValue>
        <description>Use this field to determine the approximate deposit revenue rate for new deposit balances in the deal an FI originates outside of nCino. This value reflects a FTP or cost of funds that is confirmed with the FI. By default, it is 2.</description>
        <inlineHelpText>The approximate reserve rate for deposit balances to be held on the balance sheet. This value reflects a FTP or cost of funds that is confirmed with the FI.</inlineHelpText>
        <label>New Deposit Revenue Rate</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__New_Interest_Bearing_Deposit_Balance__c</fullName>
        <description>Users populate this field with the sum of any additional interest-bearing deposit account balances for all new deposit products an FI originates in the deal outside of nCino. By default, it is blank.</description>
        <inlineHelpText>Use this field to indicate any additional interest-bearing deposit account balance for all new deposit products an FI originates in the deal outside of nCino.</inlineHelpText>
        <label>New Interest Bearing Deposit Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__New_Money__c</fullName>
        <description>This field is an optional currency field.  This is a manually entered field that is used to track the amount of new money being introduced to the Product Package.</description>
        <label>New Money</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__New_Monthly_Treasury_Income__c</fullName>
        <description>Users populate this optional field to indicate the new monthly income of all treasury products an FI originates outside of nCino net of any ECR allowance. By default, it is blank.</description>
        <inlineHelpText>The additional monthly income of all treasury products (net of ECR) in the deal that an FI originates outside of nCino.</inlineHelpText>
        <label>New Monthly Treasury Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__New_Non_Interest_Bearing_Deposit_Balance__c</fullName>
        <description>Users populate this field to indicate any additional interest-bearing deposit account balance for all new deposit products an FI originates in the deal outside of nCino.</description>
        <inlineHelpText>Use this field to indicate any additional non-interest-bearing deposit account balance for all new deposit products an FI originates in the deal outside of nCino.</inlineHelpText>
        <label>New Non-Interest Bearing Deposit Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__New_Treasury_Credit_Exposure__c</fullName>
        <description>Users populate this optional field with the sum of any new credit exposure for applicable treasury service products an FI originates outside of nCino. By default, it is blank.</description>
        <inlineHelpText>This field indicates the sum of total credit exposure for any new treasury service products in the deal an FI originates outside of nCino.</inlineHelpText>
        <label>New Treasury Credit Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__New_Treasury_One_Time_Fee_Amount__c</fullName>
        <description>Users populate this optional field with the sum of any one-time fee amounts for treasury products being originated outside of nCino. By default, it is blank.</description>
        <inlineHelpText>Populate this field with the sum of any one-time fees associated with treasury products an FI originates in the deal outside of nCino. Exclusive of recurring fees captured in New Monthly Treasury Income.</inlineHelpText>
        <label>New Treasury One Time Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Next_Annual_Review__c</fullName>
        <description>--DEPRECATED-- This field will be deprecated, as its functionality is now handled by the more generic &quot;next review date&quot; field.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>-D Next Annual Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Next_Review_Date__c</fullName>
        <description>This field is an optional date field. Only used if the customer will be initiating Reviews from the product package level. This date field is used to specify the date of the next review for the Product Package. This date will automatically populate, based off of review frequency, once the initial review date is set manually, and a review has been completed (to populate the last review date field) .</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Outstanding__c</fullName>
        <description>This currency field is an option and manually entered field. It is used to show the amount of money&quot; in use&quot;  for the Product Package. This field can also be configured to be populated with field mapping from the customers core.</description>
        <label>Outstanding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Primary_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Users populate this optional lookup field to indicate the primary borrower of loans. When populated, the system uses this field to create a specific entity involvement record when users create a loan in Deal Proposal.</description>
        <label>Primary Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Primary Product Packages</relationshipLabel>
        <relationshipName>Primary_Product_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Primary_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is an optional and manually set field. This field is a lookup to nCino users, and specifies which user is the primary officer for the Product Package</description>
        <label>Primary Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Propagate_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to execute the ActionPropagation trigger. This trigger is used to propagate approval actions to loans that are associated to the product package.</description>
        <label>Propagate Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Proposed_Affiliated_Exposure__c</fullName>
        <description>This optional field automatically populates via the system with a value based on the configuration of Relationship Statistics. This field is used to report Proposed Affiliated Exposure to this Product Package.</description>
        <label>Proposed Affiliated Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Proposed_Direct_Exposure__c</fullName>
        <description>This field is optional and automatically populates with a value based on the configuration of Relationship Statistics. This field is used to report Proposed Direct Exposure to the Product Package.</description>
        <inlineHelpText>This field is used to report Proposed Direct Exposure to the Product Package.</inlineHelpText>
        <label>Proposed Direct Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Proposed_Indirect_Exposure__c</fullName>
        <description>This field is optional and automatically populates with a value based on the configuration of Relationship Statistics. This field is used to report Proposed Indirect Exposure to the Product Package.</description>
        <inlineHelpText>This field is used to report Proposed Indirect Exposure to the Product Package.</inlineHelpText>
        <label>Proposed Indirect Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__RWA_Percentage_for_New_Treasury_Exposure__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Users populate this field with the approximate Risk Weighted Assets percentage for any new treasury exposures an FI originates in the deal outside of nCino. Percentage varies based on the mix of treasury products. By default, it is 100%.</description>
        <inlineHelpText>Risk Weighted Assets percentage for any new treasury exposures an FI originates in the deal outside of nCino. The percentage could vary based on the mix of treasury products.</inlineHelpText>
        <label>RWA Percentage for New Treasury Exposure</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Reason_For_Handover__c</fullName>
        <description>Users select the reason for loan hand over from this optional picklist. By default it is blank.</description>
        <label>Reason for Handover</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Covenant Breach</fullName>
                </value>
                <value>
                    <fullName>Declining Industry Sector</fullName>
                </value>
                <value>
                    <fullName>Financial Distress</fullName>
                </value>
                <value>
                    <fullName>Management Issue</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Review_Frequency__c</fullName>
        <description>This field is an optional and manually set field. It is only used if the customer will be initiating Reviews from the product package level. This field is used to indicate how often the product package review is required.</description>
        <label>Review Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Every 2 Months</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Reviewable_Loan_Facilities_Count__c</fullName>
        <description>This field is automatically populated based on the loans that have the &quot;is Review Ready&quot; checkbox, checked on the loan wall.  This field is used to show the number of main loan facilities ready to review. And can be utilized for entry criteria for the approval processes to ensure only loans ready to be submitted for approval are.</description>
        <label>Number of Reviewable Loan Facilities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Risk_Rating__c</fullName>
        <description>This field is an optional and manually entered field. This picklist is used to specify the risk rating for the Product Package.</description>
        <label>Risk Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Secondary_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is an optional and manually set field. This field is a lookup to nCino users, and specifies which user is the secondary officer for the Product Package</description>
        <label>Secondary Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Packages_Secondary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Stage__c</fullName>
        <description>This field specifies the current product package approval stage. If provided, this value should match one of the Stage pick list values configured for this financial institution. Optional and manually populated.</description>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Qualification / Proposal</fullName>
                </value>
                <value>
                    <fullName>Application Processing</fullName>
                </value>
                <value>
                    <fullName>Credit Underwriting</fullName>
                </value>
                <value>
                    <fullName>Credit Decisioning</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>This field is optional and manually set (or set through workflow configuration). This field is used to specify the Status of the product package. Generally used in the approval process configuration.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LLC_BI__Stage__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Hold</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rework</fullName>
                </value>
                <value>
                    <fullName>Charge-Off</fullName>
                </value>
                <value>
                    <fullName>Paid-Off</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>CBP RBP RCO Role Approved</fullName>
                </value>
                <value>
                    <fullName>RBP RCO Role Approved</fullName>
                </value>
                <value>
                    <fullName>RCO Executive Team Role Approved</fullName>
                </value>
                <value>
                    <fullName>CEO CCO CBO Role Approved</fullName>
                </value>
                <value>
                    <fullName>Director Loan Committee Approved</fullName>
                </value>
                <value>
                    <fullName>Board of Directors Approved</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__TBE__c</fullName>
        <description>This field is optional and manually set. This currency field is used to capture the Total Exposure (Borrowers) for the product package. This can be used alone or in conjunction with any other exposure fields. This field can also be configured to be populated with field mapping from the customers core.</description>
        <label>TBE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__TCE__c</fullName>
        <description>This field is optional and manually set. This currency field is used to capture total exposure (Credit) for the product package. This can be used alone or in conjunction with any other exposure fields. This field can also be configured to be populated with field mapping from the customers core.</description>
        <label>TCE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__TOE__c</fullName>
        <description>This field is optional and manually set. This currency field is used to capture total exposure (Obligor) for the product package. This can be used alone or in conjunction with any other exposure fields. This field can also be configured to be populated with field mapping from the customers core.</description>
        <label>TOE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Affiliated_Exposure__c</fullName>
        <description>This optional field automatically populates via the system with a value based on the configuration of Relationship Statistics. This field is used to report Total Affiliated Exposure to this Product Package.</description>
        <label>Total Affiliated Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Allocated_Syndication_Amount__c</fullName>
        <description>This optional field is an automatic roll-up of the total allocation amounts of any loans flagged as syndications that are associated with the product package.</description>
        <label>Total Allocated Syndication Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Direct_Exposure__c</fullName>
        <description>This field is optional and automatically populates with a value based on the configuration of Relationship Statistics. This field is used to report Total Direct Exposure to the Product Package.</description>
        <inlineHelpText>This field is used to report Total Direct Exposure to the Product Package.</inlineHelpText>
        <label>Total Direct Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Indirect_Exposure__c</fullName>
        <description>This field is optional and automatically populates with a value based on the configuration of Relationship Statistics. This field is used to report Total Indirect Exposure to the Product Package.</description>
        <inlineHelpText>This field is used to report Total Indirect Exposure to the Product Package.</inlineHelpText>
        <label>Total Indirect Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Loan_Facilities_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This field is automatically calculated. This field calculates and shows the total amount of all the main level facility &quot;original amount&quot; in the product package. This field will NOT include those loans that have been superseded, declined or withdrawn.</description>
        <label>Total Loan Facilities Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Loan_Facilities_Exposure__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>This field is optional and manually set. This field is used to specify the amount on exposure for all the main facility loans in the product package. This can be used alone or in conjunction with any other exposure fields. This field can also be configured to be populated with field mapping from the customers core.</description>
        <label>Total Loan Facilities Exposure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Net_New_Funds__c</fullName>
        <description>This optional field automatically populates via the system with a value based on the configuration of Relationship Statistics. This field is used to report Total Net New Funds to this Product Package.</description>
        <inlineHelpText>This field is used for Total Net New Funds for any renewals or modifications in this Product Package.</inlineHelpText>
        <label>Total Net New Funds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Total_Syndicated_Facility_Amount__c</fullName>
        <description>This optional field is an automatic roll-up of the total facility amounts of any loans flagged as syndications that are associated with the product package.</description>
        <label>Total Syndicated Facility Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Treasury_Annual_Operating_Cost__c</fullName>
        <description>Users populate this field with the approximate annual operating cost of originating and servicing any new treasury services an FI originates in the deal. By default, it is blank.</description>
        <inlineHelpText>The approximate annual operating cost in dollars for new treasury service products an FI originates in the deal outside of nCino.</inlineHelpText>
        <label>Treasury Annual Operating Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Unused__c</fullName>
        <description>This currency field is optional and manually entered field. This field is used to specify the available amount or (unused) amount in all the main facility loans in the product package. This field can also be configured to be populated with field mapping from the customers core</description>
        <label>Unused</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>This field is used as an external, unique key for the Product Package ID record. This value is not generally made visible to the user as it is usually used behind the scenes in data mapping exercises.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product Package</label>
    <listViews>
        <fullName>CA_Reg_1_2_4_prior_to_Credit_Und</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Account__c</columns>
        <columns>LLC_BI__Total_Loan_Facilities_Amount__c</columns>
        <columns>LLC_BI__Stage__c</columns>
        <columns>LLC_BI__Status__c</columns>
        <columns>CF_Line_Of_Business__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CF_Region__c</field>
            <operation>equals</operation>
            <value>Southeast-Region 1,Southeast-Region 2,Central-Region 4</value>
        </filters>
        <filters>
            <field>LLC_BI__Stage__c</field>
            <operation>equals</operation>
            <value>Qualification / Proposal,Application Processing</value>
        </filters>
        <filters>
            <field>CF_Credit_Analyst__c</field>
            <operation>equals</operation>
        </filters>
        <label>CA -Reg 1, 2 &amp; 4 - Prior to Credit Under</label>
    </listViews>
    <listViews>
        <fullName>CA_Reg_3_Prior_to_Credit_Underwr</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Account__c</columns>
        <columns>LLC_BI__Total_Loan_Facilities_Amount__c</columns>
        <columns>LLC_BI__Stage__c</columns>
        <columns>LLC_BI__Status__c</columns>
        <columns>CF_Line_Of_Business__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CF_Region__c</field>
            <operation>equals</operation>
            <value>Southwest-Region 3</value>
        </filters>
        <filters>
            <field>LLC_BI__Stage__c</field>
            <operation>equals</operation>
            <value>Qualification / Proposal,Application Processing</value>
        </filters>
        <filters>
            <field>CF_Credit_Analyst__c</field>
            <operation>equals</operation>
        </filters>
        <label>CA - Reg 3 - Prior to Credit Under</label>
    </listViews>
    <listViews>
        <fullName>Entity_Involvement_Records_Product_Pkg</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Booked_Affiliated_Exposure__c</columns>
        <columns>LLC_BI__Booked_Direct_Exposure__c</columns>
        <columns>LLC_BI__Booked_Indirect_Exposure__c</columns>
        <columns>LLC_BI__Committed_Affiliated_Exposure__c</columns>
        <columns>LLC_BI__Committed_Direct_Exposure__c</columns>
        <columns>LLC_BI__Committed_Indirect_Exposure__c</columns>
        <columns>LLC_BI__Primary_Entity__c</columns>
        <columns>LLC_BI__Account__c</columns>
        <columns>LLC_BI__Total_Affiliated_Exposure__c</columns>
        <columns>CF_Total_Aggregate_Exposure_Account__c</columns>
        <columns>CF_Total_Aggregate_Exposure__c</columns>
        <columns>LLC_BI__TBE__c</columns>
        <columns>LLC_BI__Total_Direct_Exposure__c</columns>
        <columns>LLC_BI__Total_Indirect_Exposure__c</columns>
        <filterScope>Mine</filterScope>
        <label>Entity Involvement Records - Product Pkg</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Account__c</columns>
        <columns>LLC_BI__Primary_Officer__c</columns>
        <columns>LLC_BI__Secondary_Officer__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>LLC_BI__All1</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Stage__c</columns>
        <columns>LLC_BI__Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Stage__c</field>
            <operation>equals</operation>
            <value>Credit Decisioning</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>LV_Board_of_Directors</fullName>
        <columns>NAME</columns>
        <columns>CF_Total_Aggregate_Exposure__c</columns>
        <columns>LLC_BI__Stage__c</columns>
        <columns>LLC_BI__Status__c</columns>
        <columns>CF_Approval_Path__c</columns>
        <columns>CF_Approver_1__c</columns>
        <columns>CF_Approver_Queue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CF_Approver_Queue__c</field>
            <operation>equals</operation>
            <value>Board Of Directors</value>
        </filters>
        <filters>
            <field>LLC_BI__Stage__c</field>
            <operation>equals</operation>
            <value>Credit Decisioning</value>
        </filters>
        <filters>
            <field>LLC_BI__Status__c</field>
            <operation>equals</operation>
            <value>In Review</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LLC_BI__Product_Package__c.PP_nCino_Product_Package</value>
        </filters>
        <label>Board of Directors</label>
        <sharedTo>
            <role>Chief_Banking_Officer</role>
            <role>Chief_Credit_Officer</role>
            <role>Chief_Executive_Officer</role>
            <role>Community_Bank_President_CBP</role>
            <role>Regional_Bank_President_RBP</role>
            <role>Regional_Credit_Officer</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LV_Community_Bank_President</fullName>
        <columns>NAME</columns>
        <columns>CF_Total_Aggregate_Exposure__c</columns>
        <columns>LLC_BI__Stage__c</columns>
        <columns>LLC_BI__Status__c</columns>
        <columns>CF_Approval_Path__c</columns>
        <columns>CF_Approver_1__c</columns>
        <columns>CF_Approver_Queue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LLC_BI__Stage__c</field>
            <operation>equals</operation>
            <value>Credit Decisioning</value>
        </filters>
        <filters>
            <field>LLC_BI__Status__c</field>
            <operation>equals</operation>
            <value>In Review</value>
        </filters>
        <filters>
            <field>CF_Approver_Queue__c</field>
            <operation>equals</operation>
            <value>CBP RBP RCO Role Queue</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LLC_BI__Product_Package__c.PP_nCino_Product_Package</value>
        </filters>
        <label>Community Bank President</label>
        <sharedTo>
            <role>Community_Bank_President_CBP</role>
        </sharedTo>
    </listViews>
</CustomObject>